--- a/murale.html
+++ b/murale.html
@@ -69,7 +69,7 @@
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Murale</a>
+				<a class="logo">Murale</a>
 			</header>
 
 			<!-- Nav -->
@@ -77,6 +77,9 @@
 				<ul class="links">
 					<li><a href="index.html">Accueil</a></li>
 					<li class="active"><a href="murale.html">Murale</a></li>
+					<li><a href="peinture.html">Peinture</a></li>
+					<li><a href="toile.html">Toile</a></li>
+					<li><a href="autre.html">Autre</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://www.facebook.com/sol.girard.35" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
