Added new actions

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 									</div>
 								</header>
 								<ul class="actions special">
-									<li><a href="generic.html" class="button large">Mes créations</a></li>
+									<li><a href="murale.html" class="button large">Mes murales</a></li>
+									<li><a href="peinture.html" class="button large">Mes peintures</a></li>
+									<li><a href="toile.html" class="button large">Mes toiles</a></li>
 								</ul>
 							</div>
 					</div>
