--- a/autre.html
+++ b/autre.html
@@ -91,7 +91,16 @@
 			<!-- Main -->
 			<div id="main" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
 
-				
+						<div class="customCard">
+						<div class="image-container">
+							<img src=""C:\Users\egirs037\Downloads\IMG_2409 (2) - Copie.jpeg"" />
+						</div>
+						<div>
+							<h4>Si pitie planette </h4>
+							<span class="date">2025</span>
+							<p><i>dessin</i></p>
+						</div>
+					</div>			
 
 			</div>
 
