--- a/autre.html
+++ b/autre.html
@@ -93,10 +93,10 @@
 
 						<div class="customCard">
 						<div class="image-container">
-							<img src=""C:\Users\egirs037\Downloads\IMG_2409 (2) - Copie.jpeg"" />
+							<img src="C:\Users\egirs037\Downloads\IMG_2409 (2) - Copie.jpeg" />
 						</div>
 						<div>
-							<h4>Si pitie planette </h4>
+							<h4> pitie planette </h4>
 							<span class="date">2025</span>
 							<p><i>dessin</i></p>
 						</div>
