--- a/autre.html
+++ b/autre.html
@@ -93,7 +93,7 @@
 
 						<div class="customCard">
 						<div class="image-container">
-							<img src="C:\Users\egirs037\Downloads\IMG_2409 (2) - Copie.jpeg" />
+							<img src="C:https://github.com/TOUQUI/solgirard.com/blob/main/images/IMG_2409%20(2)%20-%20Copie.jpeg" />
 						</div>
 						<div>
 							<h4> pitie planette </h4>
