--- a/autre.html
+++ b/autre.html
@@ -93,7 +93,7 @@
 
 						<div class="customCard">
 						<div class="image-container">
-							<img src="CIMG_2409 (2) - Copie.jpeg" />
+							<img src="images/100.jpg" alt="image" />
 						</div>
 						<div>
 							<h4> pitie planette </h4>
