New murales And New Pintures

--- a/peinture.html
+++ b/peinture.html
@@ -94,6 +94,46 @@
 
                 <div class="customCard">
                     <div class="image-container">
+                        <img src="images/39.jpg" alt="image 39" />
+                    </div>
+                    <div>
+                        <h4>Les brocoloc</h4>
+                        <span class="date">2024</span>
+                    </div>
+                </div>
+
+                <div class="customCard">
+                    <div class="image-container">
+                        <img src="images/38.jpg" alt="image 38" />
+                    </div>
+                    <div>
+                        <h4>Les brocoloc</h4>
+                        <span class="date">2024</span>
+                    </div>
+                </div>
+
+                <div class="customCard">
+                    <div class="image-container">
+                        <img src="images/37.jpg" alt="image 37" />
+                    </div>
+                    <div>
+                        <h4>Les brocoloc</h4>
+                        <span class="date">2024</span>
+                    </div>
+                </div>
+
+                <div class="customCard">
+                    <div class="image-container">
+                        <img src="images/35.jpg" alt="image 35" />
+                    </div>
+                    <div>
+                        <h4>Les brocoloc</h4>
+                        <span class="date">2024</span>
+                    </div>
+                </div>
+
+                <div class="customCard">
+                    <div class="image-container">
                         <img src="images/17.jpg" alt="image 17" />
                     </div>
                     <div>
