--- a/murale.html
+++ b/murale.html
@@ -96,6 +96,26 @@
 
 					<div class="customCard">
 						<div class="image-container">
+							<img src="images/36.jpg" alt="image 36" />
+						</div>
+						<div>
+							<h4>La course du renard</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<div class="image-container">
+							<img src="images/34.jpg" alt="image 34" />
+						</div>
+						<div>
+							<h4>La course du renard</h4>
+							<span class="date">2022</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<div class="image-container">
 							<img src="images/0.jpg" alt="image 0" />
 						</div>
 						<div>
