Renamed new image to Ton titre

--- a/peinture.html
+++ b/peinture.html
@@ -97,8 +97,8 @@
                         <img src="images/39.jpg" alt="image 39" />
                     </div>
                     <div>
-                        <h4>Les brocoloc</h4>
-                        <span class="date">2024</span>
+                        <h4>Ton titre</h4>
+                        <span class="date">2026</span>
                     </div>
                 </div>
 
@@ -107,8 +107,8 @@
                         <img src="images/38.jpg" alt="image 38" />
                     </div>
                     <div>
-                        <h4>Les brocoloc</h4>
-                        <span class="date">2024</span>
+                        <h4>Ton titre</h4>
+                        <span class="date">2026</span>
                     </div>
                 </div>
 
@@ -117,8 +117,8 @@
                         <img src="images/37.jpg" alt="image 37" />
                     </div>
                     <div>
-                        <h4>Les brocoloc</h4>
-                        <span class="date">2024</span>
+                        <h4>Ton titre</h4>
+                        <span class="date">2026</span>
                     </div>
                 </div>
 
@@ -127,8 +127,8 @@
                         <img src="images/35.jpg" alt="image 35" />
                     </div>
                     <div>
-                        <h4>Les brocoloc</h4>
-                        <span class="date">2024</span>
+                        <h4>Ton titre</h4>
+                        <span class="date">2026</span>
                     </div>
                 </div>
 
