--- a/murale.html
+++ b/murale.html
@@ -99,8 +99,8 @@
 							<img src="images/41.jpg" alt="image 41" />
 						</div>
 						<div>
-							<h4>La course du renard</h4>
-							<span class="date">2022</span>
+							<h4>Ton titre</h4>
+							<span class="date">2026</span>
 						</div>
 					</div>
 
@@ -109,8 +109,8 @@
 							<img src="images/34.jpg" alt="image 34" />
 						</div>
 						<div>
-							<h4>La course du renard</h4>
-							<span class="date">2022</span>
+							<h4>Ton titre</h4>
+							<span class="date">2026</span>
 						</div>
 					</div>
 
