Added titles and a new image

--- a/murale.html
+++ b/murale.html
@@ -96,11 +96,21 @@
 
 					<div class="customCard">
 						<div class="image-container">
+							<img src="images/39.jpg" alt="image 39" />
+						</div>
+						<div>
+							<h4>Quand la machine apprend à aimer</h4>
+							<span class="date">2026</span>
+						</div>
+					</div>
+
+					<div class="customCard">
+						<div class="image-container">
 							<img src="images/41.jpg" alt="image 41" />
 						</div>
 						<div>
-							<h4>Ton titre</h4>
-							<span class="date">2026</span>
+							<h4></h4>
+							<span class="date">2025</span>
 						</div>
 					</div>
 
@@ -109,8 +119,8 @@
 							<img src="images/34.jpg" alt="image 34" />
 						</div>
 						<div>
-							<h4>Ton titre</h4>
-							<span class="date">2026</span>
+							<h4>Eau vs feu</h4>
+							<span class="date">2025</span>
 						</div>
 					</div>
 
