--- a/peinture.html
+++ b/peinture.html
@@ -94,11 +94,11 @@
 
                 <div class="customCard">
                     <div class="image-container">
-                        <img src="images/39.jpg" alt="image 39" />
+                        <img src="images/42.jpg" alt="image 42" />
                     </div>
                     <div>
-                        <h4>Ton titre</h4>
-                        <span class="date">2026</span>
+                        <h4>Tadoussac</h4>
+                        <span class="date">2025</span>
                     </div>
                 </div>
 
@@ -107,8 +107,8 @@
                         <img src="images/38.jpg" alt="image 38" />
                     </div>
                     <div>
-                        <h4>Ton titre</h4>
-                        <span class="date">2026</span>
+                        <h4>Le temple du flex</h4>
+                        <span class="date">2025</span>
                     </div>
                 </div>
 
@@ -117,8 +117,8 @@
                         <img src="images/37.jpg" alt="image 37" />
                     </div>
                     <div>
-                        <h4>Ton titre</h4>
-                        <span class="date">2026</span>
+                        <h4>Viser la lune</h4>
+                        <span class="date">2025</span>
                     </div>
                 </div>
 
@@ -127,8 +127,8 @@
                         <img src="images/35.jpg" alt="image 35" />
                     </div>
                     <div>
-                        <h4>Ton titre</h4>
-                        <span class="date">2026</span>
+                        <h4>Brave Margot</h4>
+                        <span class="date">2025</span>
                     </div>
                 </div>
 
