Added forgoted name

--- a/murale.html
+++ b/murale.html
@@ -109,7 +109,7 @@
 							<img src="images/41.jpg" alt="image 41" />
 						</div>
 						<div>
-							<h4></h4>
+							<h4>Tory-ya ramène</h4>
 							<span class="date">2025</span>
 						</div>
 					</div>
